tests/bad/assign-to-const.pas
program AssignToConst;

const
    a = 3;

begin
    a := 5
end.
